--- a/vue-music-webapp-master/package.json
+++ b/vue-music-webapp-master/package.json
@@ -62,6 +62,8 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^0.5.8",
     "vconsole": "^2.5.2",
     "vue-loader": "^12.1.0",
